.metadata/.plugins/org.eclipse.cdt.ui/004_HAL_MULTI_INTERRUPT.build.log
18:48:01 **** Incremental Build of configuration Debug for project 004_HAL_MULTI_INTERRUPT ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Core\Src\main.o ..\Core\Src\main.c 
..\Core\Src\main.c: In function 'EXTI15_10_IRQHandler':
..\Core\Src\main.c:105:5: warning: implicit declaration of function 'EXTI_GetITStatus' [-Wimplicit-function-declaration]
  if(EXTI_GetITStatus(EXTI_Line13)!=RESET)
     ^~~~~~~~~~~~~~~~
..\Core\Src\main.c:105:22: error: 'EXTI_Line13' undeclared (first use in this function)
  if(EXTI_GetITStatus(EXTI_Line13)!=RESET)
                      ^~~~~~~~~~~
..\Core\Src\main.c:105:22: note: each undeclared identifier is reported only once for each function it appears in
Info: Parallel threads used: 1

18:48:01 Build Finished (took 191ms)

